[package]
name = "stdfuzzer"
features = "easydebug"
version = "0.1.2"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
edition = "2021"

[features]
default = ["tui"]
tui = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.0.2" }
num_cpus = "1.0"

[dependencies]
libafl = { path = "../LibAFL/libafl" }
bananafzz = { path = "../bananafzz/fuzzer" }
libafl_targets = { path = "../LibAFL/libafl_targets", features = ["sancov_pcguard_hitcounts", "sancov_cmplog", "libfuzzer"] }
# TODO Include it only when building cc
libafl_cc = { path = "../LibAFL/libafl_cc" }
mimalloc = { version = "*", default-features = false }
structopt = "0.3.25"

[lib]
name = "stdfuzzer"
crate-type = ["staticlib"]
